tests/css/media/range/error/invalid_binary_operator/mod.rs
//! Tests auto-converted from "sass-spec/spec/css/media/range/error/invalid_binary_operator"
#[allow(unused)]
use super::rsass;
#[allow(unused)]
use rsass::precision;

// Ignoring "before_colon", tests with expected error not implemented yet.

// Ignoring "eq", tests with expected error not implemented yet.

// Ignoring "gt", tests with expected error not implemented yet.

// Ignoring "gte", tests with expected error not implemented yet.

// Ignoring "in_subexpression", tests with expected error not implemented yet.

// Ignoring "lt", tests with expected error not implemented yet.

// Ignoring "lte", tests with expected error not implemented yet.
